override system template test

--- a/src/ah_openai/override/system.jinja2
+++ b/src/ah_openai/override/system.jinja2
@@ -6,5 +6,5 @@ The code word is 'banana'.
 Directly below this point should be a statement about response format.
 )
 
-{{ super }}
+{{ parent_block_commands_intro_1 }}
 {% endblock %}
